fix: set max-height for column-content on mobile in BoardComponent

--- a/src/app/main-pages/board/board.component.scss
+++ b/src/app/main-pages/board/board.component.scss
@@ -274,6 +274,11 @@ h1 {
   border-radius: 10px;
   background-color: $column-bg-grey;
 }
+
+// .cdk-drop-list-receiving {
+//   flex-wrap: nowrap;
+//   scroll-snap-type: none;
+// }
 // #endregion
 
 // #region overlays
@@ -432,12 +437,14 @@ h1 {
     align-items: flex-start;
     padding-bottom: 8px;
     width: 100%;
+
   }
 
   .column-content {
     flex-direction: row;
     align-items: flex-start;
     height: auto;
+    max-height: 288px;
     overflow-x: auto;
     overflow-y: hidden;
     width: 100%;
